Make spellcheck indicator visible on active lines. Fixes #63

--- a/styles/base.less
+++ b/styles/base.less
@@ -397,3 +397,8 @@ atom-text-editor {
     background-color: fade(@syntax-text-color, 10%);
     box-shadow: inset 0 -1px 0 @syntax-cursor-color;
 }
+
+// Misspelled word
+atom-text-editor .spell-check-misspelling .region {
+    z-index: auto;
+}
